deployment/clip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: clip-service
spec:
    selector:
        app: clip
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8000
