deployment/clip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: clip-ingress
spec:
    rules:
        - host: clip.emlo
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: clip-service
                            port:
                                number: 80
